yaml-files/hpa/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: test.info
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  - host: chee
    http:
      paths:
      - path: /stilton
        backend:
          serviceName: test123
          servicePort: 80
      - path: /cheddar
        backend:
          serviceName: test-service
          servicePort: 80
